# Sokoban

./: .gitignore  Présentation1.pptx  algo.txt  notes.txt  sokoban.geany  sokoban.ods  sokoban.xlsx  test_file
src_qtcreator/: CMakeLists.txt  CMakeLists.txt.user.bdef3e3  main.c  map.c  map.h  snake.c  snake.h
src_qtcreator/Sokoban/: Config.cpp  Config.h  Game.cpp  Game.h  Map.cpp  Map.h  MenuScreen.cpp  ScreenManager.cpp  Sokoban.pro  Sokoban.pro.user.da9498a  boardstate.cpp  boardstate.h  score.cpp  score.h  sfmlbutton.cpp  sfmlbutton.h
src_qtcreator/Sokoban/lvls/: c.bat  lvl_8.txt
src_qtcreator/Sokoban/sprites/: btn_play.afdesign  layout.afdesign  obj.afdesign
src_qtcreator/build-Sokoban-Desktop_Qt_6_5_0_GCC_64bit-Debug/: Makefile  Sokoban
src_qtcreator/build-Sokoban-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
src_qtcreator/build-Sokoban-Desktop_Qt_6_5_0_GCC_64bit-Debug/lvls/: lvl_12.txt  lvl_18.txt  lvl_37.txt  lvl_5.txt
src_qtcreator/build-Sokoban-Desktop_Qt_6_5_0_GCC_64bit-Debug/sprites/: btn_score.afdesign  player_on_obj.afdesign  sprite_caisse_on_obj.png.pxo  title.afdesign
src_qtcreator/build-Sokoban-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
src_qtcreator/build-Sokoban-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
src_qtcreator/build-Sokoban-test-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
src_qtcreator/src/: Map.cpp  MenuScreen.cpp  ScreenManager.cpp  ScreenManager.h  test.cpp  test.h
src_qtcreator/src/lvls/: lvl_23.txt  (+1 more)
(+874 files in other folders)
